Depricated Fixes
Added new method to use non-depricated method for automatic command registration as opposed to old depricated method.